force-app/main/default/objects/CGD_Announcement_Target__c/CGD_Announcement_Target__c.object-meta.xml
<CustomObject>
    <description>存放Announcement寄送對象</description>
    <label>Announcement Target</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Announcement Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>