force-app/main/default/objects/CGD_Announcement_Target__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Announcement Targets</relationshipLabel>
    <relationshipName>Announcement_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>