force-app/main/default/objects/CGD_Announcement_Target__c/fields/CGD_Announcement__c.field-meta.xml
<CustomField>
    <fullName>CGD_Announcement__c</fullName>
    <label>Announcement</label>
    <referenceTo>CGD_Announcement__c</referenceTo>
    <relationshipLabel>Announcement Targets</relationshipLabel>
    <relationshipName>Announcement_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>