force-app/main/default/objects/CGD_Announcement_Target__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <label>Receiver</label>
    <type>Email</type>
</CustomField>