force-app/main/default/objects/CGD_Announcement_Target__c/fields/ReceiverText__c.field-meta.xml
<CustomField>
    <fullName>ReceiverText__c</fullName>
    <label>ReceiverText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>