force-app/main/default/objects/CGD_Announcement_Target__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
  TEXT($User.LanguageLocaleKey) = &quot;zh_TW&quot;,
  /* 中文文案 */
  IF(
    ISBLANK(Status_Code__c),
    &quot;&quot;,
    IF(
      Status_Code__c = 200,
      &quot;成功&quot;,
      &quot;失敗&quot;
    )
  ),
  /* 英文文案 */
  IF(
    ISBLANK(Status_Code__c),
    &quot;&quot;,
    IF(
      Status_Code__c = 200,
      &quot;Success&quot;,
      &quot;Fail&quot;
    )
  )
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>